Changed the ToString method to display differently

--- a/DesignPatternsInCSharp/DesignPatternsInCSharp.csproj
+++ b/DesignPatternsInCSharp/DesignPatternsInCSharp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Builder\Burger.cs" />
+    <Compile Include="src\Factory\SpecialtyBurgerFactory.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
